--- a/Kelly/h7_participation.html
+++ b/Kelly/h7_participation.html
@@ -7,52 +7,132 @@
 {% block heading %}PARTICIPATION {% endblock %}
 {% block body %} 
 
-<div class="row gy-4">
 
+<div class="row gy-4 mt-4 ">
   <div class="col-lg-8">
     <div class="portfolio-details-slider swiper-container">
-      <div class="swiper-wrapper align-items-center">
-
-        <div class="swiper-slide">
-          <img src="/assets/assets/img/portfolio/portfolio-2.jpg" alt="">
-        </div>
-
-        <div class="swiper-slide">
-          <img src="/assets/assets/img/portfolio/portfolio-3.jpg" alt="">
-        </div>
-
-        <div class="swiper-slide">
-          <img src="/assets/assets/img/portfolio/portfolio-2.jpg" alt="">
-        </div>
-
-        <div class="swiper-slide">
-          <img src="/assets/assets/img/portfolio/portfolio-1.jpg" alt="">
-        </div>
-
-      </div>
-      <div class="swiper-pagination"></div>
+          <img src="/assets/assets/img/certifications/Tech4Barath_Paniit.jpg" alt="">
     </div>
   </div>
-
   <div class="col-lg-4">
     <div class="portfolio-info">
       <h3>Project information</h3>
       <ul>
-        <li><strong>Category</strong>: Web design</li>
-        <li><strong>Client</strong>: ASU Company</li>
-        <li><strong>Project date</strong>: 01 March, 2020</li>
-        <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+        <li><strong>Competition</strong>: Tech4Barath</li>
+        <li><strong>Project</strong>: </li>
+        <li><strong>Project date</strong>: 28,29-Feb-2020</li>
       </ul>
     </div>
-    <div class="portfolio-description">
-      <h2>This is an example of portfolio detail</h2>
-      <p>
-        Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-      </p>
+  </div>
+</div>
+ 
+<div class="row gy-4 mt-1 ">
+  <div class="col-lg-8">
+    <div class="portfolio-details-slider swiper-container">
+          <img src="/assets/assets/img/certifications/13_NSTF_Codissia.jpg" alt="">
     </div>
   </div>
-
+  <div class="col-lg-4">
+    <div class="portfolio-info">
+      <h3>Project information</h3>
+      <ul>
+        <li><strong>Competition</strong>: NSTF Codissia</li>
+        <li><strong>Project</strong>: Augmented Reality Framework</li>
+        <li><strong>Project date</strong>: 29-Aug-2019 to 31-Aug-2019</li>
+      </ul>
+    </div>
+  </div>
 </div>
-                            
+
+<div class="row gy-4 mt-1 ">
+  <div class="col-lg-8">
+    <div class="portfolio-details-slider swiper-container">
+          <img src="/assets/assets/img/certifications/Fiction2Science.jpg" alt="">
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="portfolio-info">
+      <h3>Project information</h3>
+      <ul>
+        <li><strong>Competition</strong>: Fiction2Science</li>
+        <li><strong>Project</strong>: Reduce Road accident using IOt,AI and visualization in AR</li>
+        <li><strong>Project date</strong>: 11-Nov-2019</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row gy-4 mt-1 ">
+  <div class="col-lg-8">
+    <div class="portfolio-details-slider swiper-container">
+          <img src="/assets/assets/img/certifications/NIT_Pragyan.jpg" alt="">
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="portfolio-info">
+      <h3>Project information</h3>
+      <ul>
+        <li><strong>Competition</strong>: NIT_Pragyan</li>
+        <li><strong>Project</strong>: Augmented Reality Workshop using vuforia</li>
+        <li><strong>Project date</strong>: 16,17-March-2019</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row gy-4 mt-1 ">
+  <div class="col-lg-8">
+    <div class="portfolio-details-slider swiper-container">
+          <img src="/assets/assets/img/certifications/10_Technoxian.jpg" alt="">
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="portfolio-info">
+      <h3>Project information</h3>
+      <ul>
+        <li><strong>Competition</strong>: Technoxian(World Robotics Competition)</li>
+        <li><strong>Project</strong>: Line follower race</li>
+        <li><strong>Project date</strong>: 4,5th-Dec-2019</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row gy-4 mt-1 ">
+  <div class="col-lg-8">
+    <div class="portfolio-details-slider swiper-container">
+          <img src="/assets/assets/img/certifications/9_SAE_Mobile_App.jpg" alt="">
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="portfolio-info">
+      <h3>Project information</h3>
+      <ul>
+        <li><strong>Competition</strong>: Society of Automotive Engineers(SAE) Mobile App</li>
+        <li><strong>Project</strong>:  IOT application to control Vehicle</li>
+        <li><strong>Project date</strong>: 3-March-2020</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row gy-4 mt-1 ">
+  <div class="col-lg-8">
+    <div class="portfolio-details-slider swiper-container">
+          <img src="/assets/assets/img/certifications/8_SAE_Cloud_Tech.jpg" alt="">
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="portfolio-info">
+      <h3>Project information</h3>
+      <ul>
+        <li><strong>Competition</strong>: Society of Automotive Engineers(SAE) Cloud Tech</li>
+        <li><strong>Project</strong>:  Cloud based application to control Vehicle</li>
+        <li><strong>Project date</strong>: 4-March-2020</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
   {% endblock %}
 
